# fortran2018-examples

./: .appveyor.yml  .f2py_f2cmap  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.rst  Test.f90  array-rot90.f90  assert.f90  azure-pipelines.yml  bitpat.f90  build.py  charlen.f90  devnull.f90  devnull_simple.f90  div_precision.f90  expanduser.f90  f2018errorstop.f90  fib3.f90  fib3.py  fileopen-readonly.f90  floating_precision.f90  ford.md  fpm.toml  gitrev.f90  hello.f90  huge_precision.f90  intel_gesvd.f90  meson.build  meson_options.txt  mpi_helloworld.f90  mpi_pass.f90  nans.f90  noenv.f90  overwrite_stdout.f90  perf.f90  (+17 more)
.archive/: build.py  mkdir.F90  pi2008.f90
.github/workflows/: ci.yml  ci_cmake.yml  ci_linux.yml  ci_linux_meson.yml  ci_macos.yml  ci_meson.yml  (+8 more)
CMake/: CMakeLists.txt  f08errorstop.cmake  f18errorstop.cmake
archive/: .appveyor.yml  mkdir.F90  pi2008.f90
array/: CMakeLists.txt  assumed-rank.f90  auto_allocate.f90  intel_dgesvd.f90  intel_gesvd.f90  meson.build  rot90.f90  test_rot90.f90
assembly/: CMakeLists.txt  asm.cmake  f_multiply.f90
benchmarks/: CMakeLists.txt  ackermann.f90  meson.build
block/: CMakeLists.txt  block.f90  meson.build
character/: CMakeLists.txt  README.md  ascii.f90  character_allocatable.f90  character_array.f90  charlen.f90  meson.build  overwrite_stdout.f90  print_vs_write.f90  special_characters.f90  split_string.f90  str2int.f90  string_utils.f90  test_string.f90  utf8.f90
cmake/: FindFFMPEG.cmake  compiler_find.cmake  compilers.cmake  f03abstract.cmake  f03character_allocatable.cmake  f03charalloc.cmake  f03ieee.cmake  f03selectType.cmake  f03utf8.cmake  f08block.cmake  f08command.cmake  f08contig.cmake  f08execute.cmake  f08kind.cmake  f08version.cmake  f18abstract.cmake  f18assumed_rank.cmake  f18doconcurrent.cmake  f18errorstop.cmake  f18impnone.cmake  f18prop.cmake  f18random.cmake  f2018rank.cmake  f2023array_multiple_subscript.cmake  f2023character_allocatable.cmake  f2023classof.cmake  f2023enum.cmake  f2023enumeration.cmake  f2023rank_integer.cmake  f2023real16.cmake  f2023selected_logical_kind.cmake  f2023simple_procedure.cmake  f2023ternary.cmake  f2023tokenize.cmake  f202x_do_concurrent.cmake  f2Xrank_integer.cmake  f2Xreal16.cmake  f2Xternary.cmake  f2Xtokenize.cmake  features.cmake  (+9 more)
cmake/Modules/: FindCoarray.cmake  FindFFMPEG.cmake  FindLAPACK.cmake  FindLAPACK95.cmake  FindMETIS.cmake  FindMKL.cmake  FindMUMPS.cmake  FindNetCDF.cmake  FindSCALAPACK.cmake  FindScotch.cmake
cmake/abi_check/: CMakeLists.txt  addone.c  main.f90
cmake_examples/: CMakeLists.txt  README.md
coarray/: CMakeLists.txt  README.md  helloworld.f90  iter.f90  meson.build  pi.f90  pi2008.f90
compile/: Readme.md  one_plus_one.f90  two_plus_one.f90
contiguous/: CMakeLists.txt  README.md  contiguous.F90  contiguous.f90  meson.build
cxx/: CMakeLists.txt  README.md  README.rst  c_call_f.f90  call_c.c  call_cxx.cxx  cxx_call_f.cxx  cxxfort.cpp  f_call_c.f90  f_call_cxx.f90  fun.f90  meson.build
debug/: CMakeLists.txt  README.md  badalloc.f90  badbounds.f90  maxmin_nan.f90  meson.build  typecast.f90
doc/: search.html
docs/: index.html
git/: CMakeLists.txt  main.in.f90
hdf5/: CMakeLists.txt  README.md  hdf5array.f90  hdf5demo.f90  hdf5simple.f90  meson.build
io/: CMakeLists.txt  README.md  append_file.f90  canonical.cxx  canonical.hpp  canonical_demo.cxx  cxx17filesystem.cxx  devnull.f90  devnull_simple.f90  expanduser.f90  file_or_console_output.f90  fileopen-readonly.f90  filesep.cpp  fullpath_windows.f90  leading_zeros.f90  logging.f90  meson.build  mkdir.F90  noenv.f90  path_exists.f90  path_exists_intel.f90  pathlib.F90  pathlib.f90  pathlib.in.f90  pathlib_gcc.f90  pathlib_intel.f90  pathlib_unix.f90  pathlib_windows.f90  realpath_cxx.f90  realpath_linux.f90  realpath_posix.f90  terminal_io.f90  test_pathlib.f90
lapack95/: CMakeLists.txt  demo_gesvd.F90  demo_gesvd.in.f90  intel_dgesvd.f90  meson.build
maximum/: CMakeLists.txt  meson.build
meson/: meson.build
mpi/: CMakeLists.txt  README.md  basic.c  basic.f90  coarray_helloworld.f90  coarray_iter.f90  coarray_pi.f90  helloworld.f90  meson.build  mpi.cmake  mpi_helloworld.f90  mpivers.c  mpivers.f90  thread_pass.f90
mumps/: CMakeLists.txt  README.md  blacs.f  meson.build  metis.f90  mumps.cmake  scalapack_example1.f  test_mpi.f90  test_mumps.f90
namelist/: CMakeLists.txt  README.md  config.nml  meson.build  namelist_main.f90
netcdf/: CMakeLists.txt  README.md  meson.build  simple_xy_rd.f90  simple_xy_wr.f90
openacc/: CMakeLists.txt  jacobi_openmp.f90  simple_openacc.f90
openmp/: CMakeLists.txt  meson.build  timeprec.f90
overloading/: CMakeLists.txt  f2018errorstop.f90  meson.build  pragma.f90
pointer/: CMakeLists.txt  meson.build  null.f90
random/: CMakeLists.txt  meson.build  random.f90  random_demo.f90  random_init.f90  random_init_f2018.f90
real/: CMakeLists.txt  README.md  assert.F90  assert.f90  cast_int2real.f90  coerce.F90  coerce.f90  div_precision.F90  div_precision.f90  epsilon.f90  fib3.f90  finite.f90  floating_precision.F90  floating_precision.f90  huge_precision.F90  huge_precision.f90  meson.build  nans.F90  nans.f90  not-finite.f90  polymorphic.F90  polymorphic.in.f90  polymorphic_module.f90  precision_problems.F90  precision_problems.f90  properties.f90
src/: CMakeLists.txt
standard/: CMakeLists.txt  README.md  abstract.f90  big_integer.f90  bitpat.f90  block.f90  errorstop_variable.f90  isdir.f90  isdir_intel.f90  logical_kind.c  logical_kind.f90  maxmin_nan.f90  meson.build  minloc_maxloc_mask.f90  minval_maxval_mask.f90  mkdir.F90  mkdir.f90  pause.f90  short_circuit.f90  sleep.f90  sleep_demo.f90  sleep_std.F90  statement_function.f90
submodule/: CMakeLists.txt  basic.f90  basic_sub.f90  geo.f90  meson.build  points.f90  use_ext.f90
subprojects/: submodule.wrap
system/: CMakeLists.txt  bell.aac  call_python_script.f90  color_text.f90  compiler_log.f90  gitrev.f90  meson.build  os_detect.f90  play_sound.f90
tests/: test_compilers.sh  test_rot90.f90
(+440 files in other folders)
